[project-component-parameters] - add proper unit tests