@@ -1,17 +1,19 @@
 package org.opendevstack.component_catalog.server.controllers;
 
-import org.opendevstack.component_catalog.server.model.ProvisioningDeleteRequest;
-import org.opendevstack.component_catalog.server.model.ProvisioningStatusUpdateRequest;
-import org.opendevstack.component_catalog.server.services.ProvisionerActionsService;
-import org.opendevstack.component_catalog.server.services.provisioner.Status;
 import com.fasterxml.jackson.core.JsonProcessingException;
+import org.apache.commons.lang3.tuple.Pair;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.opendevstack.component_catalog.server.model.ProvisioningDeleteRequest;
+import org.opendevstack.component_catalog.server.model.ProvisioningStatusUpdateRequest;
+import org.opendevstack.component_catalog.server.model.ProvisioningStatusUpdateRequestParametersInner;
+import org.opendevstack.component_catalog.server.services.ProvisionerActionsService;
+import org.opendevstack.component_catalog.server.services.provisioner.Status;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.Mockito.verify;
 
@@ -32,18 +34,24 @@ class ProvisionerActionsApiControllerTest {
         var componentId = "componentId";
         var catalogItemId = "catalogItemId";
         var componentUrl = "componentUrl";
+        var parameter = ProvisioningStatusUpdateRequestParametersInner.builder()
+                .name("parameterName")
+                .value("parameterValue")
+                .build();
+        var parameters = List.of(parameter);
 
         var request = new ProvisioningStatusUpdateRequest()
                 .componentId(componentId)
                 .catalogItemId(catalogItemId)
-                .componentUrl(componentUrl);
+                .componentUrl(componentUrl)
+                .parameters(parameters);
 
         // when
         provisionerActionsApiController.notifyProvisioningStatusUpdate(projectKey, status.name(), request);
 
         // then
         verify(provisionerActionsService).updateComponentProvisioningStatus(projectKey.toUpperCase(),
-                status, componentId, catalogItemId, componentUrl, Collections.emptyList());
+                status, componentId, catalogItemId, componentUrl, List.of(Pair.of(parameter.getName(), parameter.getValue())));
     }
 
     @Test
